SVG text selection doesn't work with hyperlinked text https://bugs.webkit.org/show_bug.cgi?id=29166

Reviewed by Eric Seidel.

Cleanup SVGAElement. There is no need to test for middle mouse button here, this
is handled elsewhere, so remove isMiddleMouseButtonEvent. Similarly handleLinkClick
is not used anymore by HTMLAnchorElement, remove it. Finally, _self indeed is not needed.

No new tests, since no change in behaviour.

* WebCore.order:
* html/HTMLAnchorElement.cpp:
* html/HTMLAnchorElement.h:
(WebCore):
* svg/SVGAElement.cpp:
(WebCore::SVGAElement::defaultEventHandler):

Canonical link: https://commits.webkit.org/110888@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124538 268f45cc-cd09-0410-ab3c-d52691b4dbfc